GUI 리디렉션 구현 완료, GUI MainWindow 관련 기능 공부 및 구현 필요

--- a/build-Solution2-Desktop_Qt_5_11_0_MSVC2017_64bit-Debug/Makefile
+++ b/build-Solution2-Desktop_Qt_5_11_0_MSVC2017_64bit-Debug/Makefile
@@ -236,6 +236,7 @@ Makefile: ..\Solution2\Solution2.pro D:\Qt\5.11.0\msvc2017_64\mkspecs\win32-msvc
 		D:\Qt\5.11.0\msvc2017_64\mkspecs\features\qt_config.prf \
 		D:\Qt\5.11.0\msvc2017_64\mkspecs\win32-msvc\qmake.conf \
 		D:\Qt\5.11.0\msvc2017_64\mkspecs\features\spec_post.prf \
+		.qmake.stash \
 		D:\Qt\5.11.0\msvc2017_64\mkspecs\features\exclusive_builds.prf \
 		D:\Qt\5.11.0\msvc2017_64\mkspecs\common\msvc-version.conf \
 		D:\Qt\5.11.0\msvc2017_64\mkspecs\features\toolchain.prf \
@@ -428,6 +429,7 @@ D:\Qt\5.11.0\msvc2017_64\mkspecs\features\qt_functions.prf:
 D:\Qt\5.11.0\msvc2017_64\mkspecs\features\qt_config.prf:
 D:\Qt\5.11.0\msvc2017_64\mkspecs\win32-msvc\qmake.conf:
 D:\Qt\5.11.0\msvc2017_64\mkspecs\features\spec_post.prf:
+.qmake.stash:
 D:\Qt\5.11.0\msvc2017_64\mkspecs\features\exclusive_builds.prf:
 D:\Qt\5.11.0\msvc2017_64\mkspecs\common\msvc-version.conf:
 D:\Qt\5.11.0\msvc2017_64\mkspecs\features\toolchain.prf:
